# ComfyUI-Pixal3D-CoordinateConsistency

./: .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  comfy-env-root.toml  comfy-test.toml  prestartup_script.py  pyproject.toml  requirements.txt
nodes/: __init__.py  comfy-env.toml  nodes_inference.py  nodes_loader.py  nodes_mesh.py  stages.py
nodes/naf_pkg/: VENDORED.md
nodes/naf_pkg/src/layers/: convolutions.py
nodes/naf_pkg/src/model/: __init__.py
nodes/pixal3d/: __init__.py
nodes/pixal3d/datasets/: flexi_dual_grid.py  sparse_structure_latent.py  sparse_voxel_pbr.py  structured_latent.py  structured_latent_shape.py  structured_latent_svpbr.py
nodes/pixal3d/models/: __init__.py  sparse_structure_flow.py  sparse_structure_vae.py  structured_latent_flow.py
nodes/pixal3d/models/sc_vaes/: fdg_vae.py  sparse_unet_vae.py
nodes/pixal3d/modules/: VENDORED.md  dinov3_vendored.py  image_feature_extractor.py
nodes/pixal3d/modules/attention/: modules.py  proj_attention.py
nodes/pixal3d/modules/sparse/: basic.py
nodes/pixal3d/modules/sparse/attention/: modules.py  proj_attention.py
nodes/pixal3d/modules/sparse/conv/: conv_flex_gemm.py  conv_torchsparse.py
nodes/pixal3d/modules/transformer/: blocks.py  modulated.py
nodes/pixal3d/pipelines/: __init__.py  base.py  pixal3d_image_to_3d.py
nodes/pixal3d/pipelines/rembg/: BiRefNet.py
nodes/pixal3d/representations/mesh/: base.py
nodes/pixal3d/representations/voxel/: voxel_model.py
nodes/pixal3d/trainers/: __init__.py  basic.py
nodes/pixal3d/trainers/flow_matching/: flow_matching.py  sparse_flow_matching.py
nodes/pixal3d/trainers/vae/: sparse_structure_vae.py
nodes/pixal3d/utils/: dist_utils.py  loss_utils.py  render_utils.py  vis_utils.py
web/: viewer.html
web/js/: mesh_preview.js
workflows/: pixal3d_basic.json
(+4 files in other folders)
