[project]
name = "ComfyUI-Pixal3D"
description = "ComfyUI nodes for Pixal3D (SIGGRAPH 2026, TencentARC) — pixel-aligned image-to-3D generation. Single image in, textured GLB out. Models autodownload from HuggingFace. NOTE: Pixal3D weights are academic-only and EU-excluded under Tencent's license; see README."
version = "0.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-Pixal3D"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "Pixal3D"
